fixed mobile input visibility

--- a/sass/message.scss
+++ b/sass/message.scss
@@ -37,7 +37,7 @@
 .chats {
   padding: 1rem;
   background: $white;
-  padding-bottom: 8rem;
+  padding-bottom: 9rem;
   overflow-y: auto;
   width: 100%;
   height: 80%;
@@ -98,11 +98,20 @@
   align-items: center;
 }
 .input__bar {
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  // width: 100%;
+  position: fixed;
+  @include mobile {
+	bottom: 50px;
+	left: 5px;
+	right: 0;
+  }
+  @include tablet {
+	bottom: 0;
+	left: 16px;
+	right: 16px;
+  }
+  
+  
+  //width: 100%;
   padding: 1rem;
   background: $white;
   display: flex;
@@ -152,6 +161,9 @@
     resize: none;
     @include mobile {
       // height: 2rem;
+	  &:focus {
+		//margin-bottom: 100px;
+	  }
     }
     @include tablet {
       // height: 2.5rem;
